Got the sync working with generating APR report